welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:20: error: Unit does not take parameters
		setCouleurBrosse(T(k));baisseBrosse();leveBrosse();avance()
                                  ^